[project]
name = "pubmed-mcp-server"
version = "0.1.0"
description = "PubMed MCP Server for pharmaceutical patent research"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.11.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"